force-app/main/default/objects/FLODocs__Change_Log_Ready_To_Insert_Event__e/FLODocs__Change_Log_Ready_To_Insert_Event__e.object-meta.xml
<CustomObject>
    <description>Subscribe to this Platform Event to receive messages about Change Logs that need to be inserted.</description>
    <label>Change Log Ready-to-Insert Event</label>
    <pluralLabel>Change Log Ready-to-Insert Events</pluralLabel>
</CustomObject>