force-app/main/default/objects/FLODocs__Change_Log_Ready_To_Insert_Event__e/fields/FLODocs__Change_Overview__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Change_Overview__c</fullName>
    <description>Description of the change.</description>
    <label>Change Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>