force-app/main/default/objects/FLODocs__Change_Log_Ready_To_Insert_Event__e/fields/FLODocs__FLO_Customization__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__FLO_Customization__c</fullName>
    <description>Id of the FLO_Customization__c record corresponding to this Change Log.</description>
    <label>Customization Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>