force-app/main/default/objects/FLODocs__Change_Log_Ready_To_Insert_Event__e/fields/FLODocs__Operation__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Operation__c</fullName>
    <description>Typically &quot;create&quot;, &quot;edit&quot;, &quot;delete&quot;.</description>
    <label>Operation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>